P3/ejudge_contests/01/var/archive/xmlreports/0/0/0/000023
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="23" judge-id="24" status="CE" scoring="ACM" run-tests="0" contest-id="301" compile-error="yes" >
  <uuid>16382c05-b8ad-43bf-a6f3-b1f6e4052215</uuid>
  <compiler_output>000023.cpp: In function 'int main()':
000023.cpp:24:17: error: expected primary-expression before ';' token
     cout&lt;&lt;i&lt;&lt;j&lt;&lt;;
                 ^
</compiler_output>
</testing-report>
